# ComSim

./: Makefile  pyproject.toml
core/generation/algorithms/: calculate_packing_fraction.py  nearest_neighbour_algorithm.py  nna.py  utils_nna.py
core/generation/helper_fucntions/: calculate_packing_fraction.py  collision_checks.py  ditributions.py
core/generation/models/: distribution_properties.py  geometrical_models.py
core/generation/visualization/: plots.py
testing/: nna.py  rsa.py
